[package]
name = "rusted-ruins-common"
version = "0.0.1"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[lib]
name = "rusted_ruins_common"
crate-type = ["rlib"]

[features]
global_state_obj = []

[dependencies.rusted-ruins-array2d]
path = "../array2d"

[dependencies]
serde = "1"
serde_derive = "1"
lazy_static = "1"
bitflags = "1"
tar = "0.4"
rmp = "0.8"
rmp-serde = "0.13"
fnv = "1"

