[package]
name = "rusted-ruins-common"
version = "0.1.0"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[lib]
name = "rusted_ruins_common"
crate-type = ["rlib"]

[features]
global_state_obj = []

[dependencies.rusted-ruins-array2d]
path = "../array2d"

[dependencies]
serde = "1"
serde_derive = "1"
serde_cbor = "0.9"
lazy_static = "1"
log = "0.4"
bitflags = "1"
tar = "0.4"
fnv = "1"
arrayvec = { version = "0.4", features = ["serde-1", "use_union"] }

