[package]
name = "rusted-ruins-makepak"
version = "0.11.0"
edition = "2021"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_with = "1"
ron = "0.7"
thiserror = "1"
tar = "0.4"
clap = "2"
image = "0.23"

[dependencies.rusted-ruins-geom]
path = "../geom"

[dependencies.rusted-ruins-common]
path = "../common"


