[package]
name = "rusted-ruins-makepak"
version = "0.12.0"
edition = "2021"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_with = "2"
ron = "0.8"
thiserror = "1"
tar = "0.4"
clap = { version = "3", features = ["derive"] }
image = "0.24"

tile-geom = { git = "https://github.com/garkimasera/tile-geom.git" }

[dependencies.rusted-ruins-common]
path = "../common"


