[package]
name = "rusted-ruins-map-editor"
version = "0.9.0"
edition = "2018"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[dependencies]
rusted-ruins-geom = { path = "../geom" }
rusted-ruins-common = { path = "../common", features = ["global_state_obj"] }

gtk = "0.14"
gdk = "0.14"
gio = "0.14"
gdk-pixbuf = "0.14"
cairo-rs = "0.14"
tar = "0.4"
arrayvec = "0.7"
log = "0.4"
env_logger = "0.8"
