[package]
name = "rusted-ruins-map-generator"
version = "0.1.0"
edition = "2018"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[lib]
name = "rusted_ruins_map_generator"
crate-type = ["rlib"]

[dependencies]
serde = "1"
arrayvec = "0.5"
rand = "0.7"

[dependencies.rusted-ruins-geom]
path = "../geom"

[dependencies.rusted-ruins-rng]
path = "../rng"
