[package]
name = "rusted-ruins-rules"
version = "0.1.0"
edition = "2018"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[lib]
name = "rusted_ruins_rules"
crate-type = ["rlib"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
lazy_static = "1"

[dependencies.rusted-ruins-geom]
path = "../geom"

[dependencies.rusted-ruins-common]
path = "../common"
