[package]
name = "rusted-ruins"
version = "0.8.0"
edition = "2018"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[dependencies]
anyhow = "1"
clap = "2"
dirs = "3"
env_logger = "0.8"
fluent = "0.14"
fnv = "1"
once_cell = "1"
log = "0.4"
regex = "1"
serde = "1"
serde_derive = "1"
rand = "0.8"
tar = "0.4"
toml = "0.5"
unic-langid = "0.9"
walkdir = "2"

[dependencies.rusted-ruins-geom]
path = "../geom"

[dependencies.rusted-ruins-common]
path = "../common"
features = ["global_state_obj"]

[dependencies.rusted-ruins-audio]
path = "../audio"

[dependencies.rusted-ruins-rng]
path = "../rng"

[dependencies.rusted-ruins-rules]
path = "../rules"

[dependencies.rusted-ruins-map-generator]
path = "../map-generator"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image"]
