[package]
name = "rusted-ruins-script"
version = "0.1.0"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
log = "0.4"
nom = "7"
once_cell = "1"
regex = "1"
thiserror = "1"

rusted-ruins-common = { path = "../common", features = ["global_state_obj"] }
rusted-ruins-rng = { path = "../rng" }

[dependencies.rustpython-vm]
git = "https://github.com/RustPython/RustPython.git"
rev = "2a26ed00964b900d247d6a8478d8cd24b13cc096"
default-features = false
features = ["threading", "compiler", "parser"]